WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259891
Canva doesn't launch with STATIC_IPAD_USER_AGENT_VALUE enabled
https://bugs.webkit.org/show_bug.cgi?id=259891
Summary
Canva doesn't launch with STATIC_IPAD_USER_AGENT_VALUE enabled
Tim Horton
Reported
2023-08-07 12:32:40 PDT
Canva doesn't launch with STATIC_IPAD_USER_AGENT_VALUE enabled
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-08-07 12:32:45 PDT
<
rdar://problem/111123598
>
Tim Horton
Comment 2
2023-08-07 12:36:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16447
EWS
Comment 3
2023-08-07 14:09:50 PDT
Committed
266657@main
(15c863e9164b): <
https://commits.webkit.org/266657@main
> Reviewed commits have been landed. Closing PR #16447 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug