Canva doesn't launch with STATIC_IPAD_USER_AGENT_VALUE enabled https://bugs.webkit.org/show_bug.cgi?id=259891 rdar://111123598

Reviewed by Dean Jackson.

* Source/WebCore/platform/ios/UserAgentIOS.mm:
(WebCore::standardUserAgentWithApplicationName):
Canva depends on their application user agent string being respected; without it,
the app will not launch.

260450@main introduced a mode where we hard-code more of the user agent string,
in order to allow visionOS in mobile mode to look like an iPad, but went a
little too far, and hardcoded the application-specific portion of the UA as well.

Bring back the custom application name while maintaining the hard-coded portion
in the beginning of the string.

Canonical link: https://commits.webkit.org/266657@main